# dawproject_c

./: .gitignore  CMakeLists.txt  PROJECT_ROADMAP.md  README.md  requirements-validation-report.md
05-implementation/: BUILDING.md  CMakeLists.txt  performance_verification_report.md  red_phase_runner.cpp  refactor-verification-report.md  task-17-decision-record.md  tdd-cycle-2-planning.md  tdd-cycle.ps1  tdd_cmake.txt
05-implementation/build_ci/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dawproject_c.sln  dawproject_data.vcxproj  dawproject_data.vcxproj.filters  dawproject_platform.vcxproj  dawproject_platform.vcxproj.filters  performance_test.vcxproj  performance_test.vcxproj.filters  red_phase_runner.vcxproj  red_phase_runner.vcxproj.filters  run_performance_test.vcxproj  run_performance_test.vcxproj.filters  tdd.vcxproj  tdd.vcxproj.filters  test_data_red.vcxproj  test_data_red.vcxproj.filters  test_data_red_include-b12d07c.cmake  test_data_red_tests-b12d07c.cmake
05-implementation/build_ci/Debug/: dawproject_platform.lib
05-implementation/build_ci/dawproject_data.dir/Debug/dawproject_data.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  dawproject_data.lastbuildstate
05-implementation/build_ci/dawproject_platform.dir/Debug/dawproje.4898A83E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
05-implementation/build_ci/performance_test.dir/Debug/: performance_test.exe.recipe
05-implementation/build_ci/performance_test.dir/Debug/performance_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
05-implementation/build_ci/red_phase_runner.dir/Debug/: red_phase_runner.exe.recipe
05-implementation/build_ci/red_phase_runner.dir/Debug/red_phase_runner.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
05-implementation/build_ci/test_data_red.dir/Debug/: test_data_red.exe.recipe
05-implementation/build_ci/test_data_red.dir/Debug/test_data_red.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
05-implementation/build_ci/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
05-implementation/build_ci/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
05-implementation/build_tdd/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dawproject-config.cmake  dawproject_c.sln  dawproject_data.vcxproj  dawproject_data.vcxproj.filters  dawproject_platform.vcxproj  dawproject_platform.vcxproj.filters  dawproject_platform_minimal.vcxproj  dawproject_platform_minimal.vcxproj.filters  dawproject_tdd_phase.sln  performance_test.vcxproj  performance_test.vcxproj.filters  red_phase_runner.vcxproj  red_phase_runner.vcxproj.filters  run_performance_test.vcxproj  run_performance_test.vcxproj.filters  tdd.vcxproj  tdd.vcxproj.filters  test_api_include-b12d07c.cmake  test_business_include-b12d07c.cmake  test_data_include-b12d07c.cmake  test_data_red.vcxproj  test_data_red.vcxproj.filters  test_data_red_include-b12d07c.cmake  test_data_red_tests-b12d07c.cmake  test_green.cpp  test_green_CMakeLists.txt  test_integration_include-b12d07c.cmake  test_platform_include-b12d07c.cmake  test_platform_red.vcxproj  (+2 more)
05-implementation/build_tdd/Debug/: dawproject_platform.lib  dawproject_platform_minimal.lib
05-implementation/build_tdd/Testing/Temporary/: CTestCostData.txt
05-implementation/build_tdd/dawproject_data.dir/Debug/dawproject_data.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
05-implementation/build_tdd/dawproject_platform.dir/Debug/: dawproject_platform.dll.recipe  dawproject_platform.lib.recipe
05-implementation/build_tdd/dawproject_platform.dir/Debug/dawproje.2429403F.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  (+7 more)
05-implementation/build_tdd/performance_test.dir/Debug/: performance_test.exe.recipe  performance_test.ilk
05-implementation/build_tdd/red_phase_runner.dir/Debug/: red_phase_runner.exe.recipe
05-implementation/build_tdd/test_data_red.dir/Debug/: test_data_red.exe.recipe
05-implementation/build_tdd/test_platform_red.dir/Debug/: test_platform_red.exe.recipe
05-implementation/cmake/: dawproject-config.cmake.in
05-implementation/docs/: performance-verification-report.md
05-implementation/include/dawproject/data/: data_access_engine.h  data_access_factory.h
05-implementation/include/dawproject/platform/: factory.h  interfaces.h  types.h
05-implementation/src/: performance_test.cpp
05-implementation/src/data/: data_access_engine_extracted.cpp  data_access_engine_extracted_backup.cpp  data_access_engine_extracted_fixed.cpp  data_access_engine_impl.cpp  data_access_engine_impl.h  data_access_factory.cpp  xml_processor_impl.cpp  xml_processor_impl.h  zip_processor_impl.cpp  zip_processor_impl.h
05-implementation/src/platform/: filesystem_impl.cpp  filesystem_impl.h  memory_impl.cpp  memory_impl.h  platform_factory.cpp  threading_impl.cpp  threading_impl.h
05-implementation/tests/: CMakeLists.txt
05-implementation/tests/acceptance/: test_acceptance_api.cpp
05-implementation/tests/integration/: test_roundtrip.cpp
05-implementation/tests/unit/: CMakeLists.txt  test_data_access_red.cpp  test_platform_filesystem.cpp  test_platform_memory.cpp  test_platform_threading.cpp
(+112 files in other folders)
